--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^3.26.4",
     "axios": "^0.19.1",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
   },
